--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -1,8 +1,6 @@
 name: Node CI
 
-on:
-  push:
-    branches: -master
+on: [push]
 
 jobs:
   build:
@@ -15,7 +13,6 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           ARGS: "-rlgoDzvc -i --delete"
-          SOURCE: "dist/"
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_PORT: "2222"
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
